--- a/public/scss/dark-mode/_dark-mode.scss
+++ b/public/scss/dark-mode/_dark-mode.scss
@@ -869,7 +869,7 @@
     }
 
     .rbt-header-top.rbt-header-top-1 {
-        background: var(--color-primary) !important;
+        background: var(--color-white) !important;
     }
 
     .rbt-information-list {
@@ -1002,8 +1002,8 @@
 
     .rbt-header {
         .rbt-header-wrapper {
-            background-color: var(--color-bodyest);
-            box-shadow: 0px 20px 34px rgba(0, 0, 0, 0.0509803922);
+            background-color: var(--color-white);
+            // box-shadow: 0px 20px 34px rgba(0, 0, 0, 0.0509803922);
         }
 
         &.rbt-transparent-header {
@@ -1018,8 +1018,10 @@
 
         &.rbt-header-8 {
             .mainbar-row {
+                margin-bottom: 20px;
                 background-color: var(--color-bodyest);
-                box-shadow: var(--dark-shadow-2);
+                // box-shadow: var(--dark-shadow-2);
+                box-shadow: px 4px 5px rgba(255, 255, 255, 0.2);
 
                 // .mainmenu-nav {
                 //     .mainmenu {
