--- a/public/scss/dark-mode/_dark-mode.scss
+++ b/public/scss/dark-mode/_dark-mode.scss
@@ -2126,13 +2126,13 @@
 
     &.rbt-dark-header-8 {
         .rbt-header-8 {
-            background: var(--gradient-dark) !important;
+            background: var(--color-white) !important;
         }
     }
 
     .rbt-dark-header-8 {
         &.rbt-header-8 {
-            background: var(--gradient-dark) !important;
+            background: #ffffff !important;
         }
     }
 
