--- a/public/scss/dark-mode/_dark-mode.scss
+++ b/public/scss/dark-mode/_dark-mode.scss
@@ -25,8 +25,7 @@
     }
 
     .bg-color-white {
-        background: var(--color-darker) !important;
-        // background: var(--color-bodyest) !important;
+        background: #000000 !important;
     }
 
     .color-white-dark {
@@ -101,7 +100,7 @@
     }
 
     .bg-gradient-1 {
-        background: var(--color-bodyest) !important;
+        background: #000000 !important;
     }
 
     .bg-gradient-3 {
@@ -1002,7 +1001,7 @@
 
     .rbt-header {
         .rbt-header-wrapper {
-            background-color: var(--color-white);
+            background-color: var(--color-bodyest);
             // box-shadow: 0px 20px 34px rgba(0, 0, 0, 0.0509803922);
         }
 
@@ -1018,10 +1017,9 @@
 
         &.rbt-header-8 {
             .mainbar-row {
-                margin-bottom: 20px;
+                margin-bottom: 0px;
                 background-color: var(--color-bodyest);
-                // box-shadow: var(--dark-shadow-2);
-                box-shadow: px 4px 5px rgba(255, 255, 255, 0.2);
+                box-shadow: none;
 
                 // .mainmenu-nav {
                 //     .mainmenu {
@@ -1057,7 +1055,7 @@
         color: var(--color-white-dark);
     }
 
-    .rbt-header .mainmenu-nav .mainmenu>li>a {
+    .rbt-header .mainmenu-nav .mainmenu > li > a {
         color: var(--color-white-dark);
     }
 
@@ -1828,7 +1826,7 @@
     .rbt-btn {
         &.btn-border {
             background: transparent;
-            border: 2px solid var(--dark-color-border);
+            border: 2px solid var(--color-white-dark);
             color: var(--color-white-dark);
 
             &:hover {
